syntax = "proto3";

package com.example.internal.commonmodels;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.commonmodels";

message Device {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  StatusType statusType = 5;
  string user_id = 6;
  google.protobuf.Timestamp updated_at = 7;

  enum StatusType {
    STATUS_TYPE_UNSPECIFIED = 0;
    STATUS_TYPE_ONLINE = 1;
    STATUS_TYPE_OFFLINE = 2;
  }
}
